# evoparticlelife

./: .gitignore  README.md  evo_particle_life.py  metrics.py  plot_key_insights.py  render.py  requirements.txt  run_experiment.py  test_setup.py  vlm_evaluator.py
bevy/: CLAUDE.md  Cargo.toml  build-wasm.sh  index.html
bevy/src/: main.rs
bevy/src/shaders/: audio.wgsl  bin_prefix_sum.wgsl  render.wgsl
conf/: config.yaml
conf/experiment/: baseline_test.yaml  evo_focused.yaml  evolution_sweep.yaml  exploration_sweep.yaml  long_evolution.yaml  low_mutation_sweep.yaml  quick_exploration.yaml  quick_sweep.yaml  single.yaml  sweep.yaml  ultra_long_single.yaml  very_long_sweep.yaml
conf/metrics/: default.yaml
conf/mutation/: default.yaml  high_evolution.yaml  low_evolution.yaml
conf/simulation/: compact.yaml  default.yaml  large.yaml  large_long.yaml  medium.yaml  small.yaml  very_large.yaml
scripts/: analyze_low_mutation_sweep.py  analyze_results.py  analyze_sweep.py  evo_particle_life.py  metrics.py  run_experiment.py  run_sweep.py  test_configs.py
web/: evo_particle_life.html
